Fix gnome desktop jterm icon not matching running process.